# oj-eval-codex-bedrock-020-20260720144726-moonshotaikimi-17833

./: CMakeLists.txt  buddy.c
